# claude-guardrails

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
benches/: startup.rs
config/: allow.example.toml  default.toml
src/: audit.rs  config.rs  input.rs  lib.rs  main.rs  output.rs
src/engine/: bash.rs  common.rs  file.rs  mod.rs
src/parser/: ast.rs  mod.rs  shell.rs  wrapper.rs
src/rules/: allowlist.rs  dangerous.rs  exfiltration.rs  mod.rs  secrets.rs
tests/integration/: bash_tests.rs  file_tests.rs  mod.rs  override_tests.rs
