[package]
name = "claude-guardrails"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Security guardrails for Claude Code YOLO mode"
repository = "https://github.com/leegonzales/claude-guardrails"
keywords = ["claude", "security", "guardrails", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.12"
shlex = "1.3"
once_cell = "1.20"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
# AST-based shell parsing
tree-sitter = "0.25"
tree-sitter-bash = "0.23"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bench]]
name = "startup"
harness = false
